Table users {
  id bigint [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  email_verified_at timestamp
  password varchar(255) [not null]
  role varchar(30) [not null, default: 'student']
  status boolean [not null, default: true]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
}

Table students {
  id bigint [pk, increment]
  user_id bigint [not null, unique]
  student_code varchar(30) [not null, unique]
  date_of_birth date
  gender varchar(20) [not null]
  class_name varchar(100)
  faculty varchar(150)
  phone varchar(20)
  address text
  priority_type varchar(100)
  created_at timestamp
  updated_at timestamp
}

Table buildings {
  id bigint [pk, increment]
  name varchar(100) [not null]
  code varchar(30) [not null, unique]
  address varchar(255)
  total_floors int [not null, default: 1]
  gender_type varchar(20) [not null]
  status varchar(30) [not null, default: 'active']
  description text
  created_at timestamp
  updated_at timestamp
}

Table rooms {
  id bigint [pk, increment]
  building_id bigint [not null]
  room_number varchar(30) [not null]
  floor int [not null]
  room_type varchar(50)
  gender_type varchar(20) [not null]
  capacity int [not null]
  monthly_price decimal(12,2) [not null, default: 0]
  status varchar(30) [not null, default: 'available']
  created_at timestamp
  updated_at timestamp

  indexes {
    (building_id, room_number) [unique]
  }
}

Table beds {
  id bigint [pk, increment]
  room_id bigint [not null]
  bed_number varchar(30) [not null]
  status varchar(30) [not null, default: 'available']
  description text
  created_at timestamp
  updated_at timestamp

  indexes {
    (room_id, bed_number) [unique]
  }
}

Table room_registrations {
  id bigint [pk, increment]
  student_id bigint [not null]
  semester varchar(30) [not null]
  academic_year varchar(20) [not null]
  preferred_room_type varchar(50)
  priority_score int [not null, default: 0]
  status varchar(30) [not null, default: 'pending']
  note text
  reviewed_by bigint
  reviewed_at datetime
  rejection_reason text
  created_at timestamp
  updated_at timestamp

  indexes {
    (student_id, semester, academic_year) [unique]
  }
}

Table allocations {
  id bigint [pk, increment]
  registration_id bigint [not null, unique]
  student_id bigint [not null]
  bed_id bigint [not null]
  allocated_by bigint [not null]
  start_date date [not null]
  end_date date
  status varchar(30) [not null, default: 'active']
  note text
  created_at timestamp
  updated_at timestamp
}

Table contracts {
  id bigint [pk, increment]
  allocation_id bigint [not null, unique]
  contract_code varchar(50) [not null, unique]
  start_date date [not null]
  end_date date [not null]
  monthly_price decimal(12,2) [not null]
  deposit_amount decimal(12,2) [not null, default: 0]
  status varchar(30) [not null, default: 'active']
  signed_at datetime
  terminated_at datetime
  termination_reason text
  created_at timestamp
  updated_at timestamp
}

Table utility_readings {
  id bigint [pk, increment]
  room_id bigint [not null]
  reading_month int [not null]
  reading_year int [not null]
  previous_electricity decimal(12,2) [not null, default: 0]
  current_electricity decimal(12,2) [not null, default: 0]
  previous_water decimal(12,2) [not null, default: 0]
  current_water decimal(12,2) [not null, default: 0]
  electricity_unit_price decimal(12,2) [not null, default: 0]
  water_unit_price decimal(12,2) [not null, default: 0]
  recorded_by bigint
  recorded_at datetime
  created_at timestamp
  updated_at timestamp

  indexes {
    (room_id, reading_month, reading_year) [unique]
  }
}

Table invoices {
  id bigint [pk, increment]
  contract_id bigint [not null]
  invoice_code varchar(50) [not null, unique]
  billing_month int [not null]
  billing_year int [not null]
  total_amount decimal(12,2) [not null, default: 0]
  due_date date
  paid_at datetime
  status varchar(30) [not null, default: 'unpaid']
  created_by bigint
  created_at timestamp
  updated_at timestamp

  indexes {
    (contract_id, billing_month, billing_year) [unique]
  }
}

Table invoice_items {
  id bigint [pk, increment]
  invoice_id bigint [not null]
  item_type varchar(50) [not null]
  description varchar(255)
  quantity decimal(12,2) [not null, default: 1]
  unit_price decimal(12,2) [not null, default: 0]
  amount decimal(12,2) [not null, default: 0]
  created_at timestamp
  updated_at timestamp
}

Table violation_records {
  id bigint [pk, increment]
  student_id bigint [not null]
  contract_id bigint
  recorded_by bigint [not null]
  violation_date date [not null]
  violation_type varchar(100) [not null]
  description text [not null]
  penalty_amount decimal(12,2) [not null, default: 0]
  status varchar(30) [not null, default: 'pending']
  resolved_at datetime
  created_at timestamp
  updated_at timestamp
}

Ref: students.user_id - users.id

Ref: rooms.building_id > buildings.id

Ref: beds.room_id > rooms.id

Ref: room_registrations.student_id > students.id
Ref: room_registrations.reviewed_by > users.id

Ref: allocations.registration_id - room_registrations.id
Ref: allocations.student_id > students.id
Ref: allocations.bed_id > beds.id
Ref: allocations.allocated_by > users.id

Ref: contracts.allocation_id - allocations.id

Ref: utility_readings.room_id > rooms.id
Ref: utility_readings.recorded_by > users.id

Ref: invoices.contract_id > contracts.id
Ref: invoices.created_by > users.id

Ref: invoice_items.invoice_id > invoices.id

Ref: violation_records.student_id > students.id
Ref: violation_records.contract_id > contracts.id
Ref: violation_records.recorded_by > users.id